smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/loads-mixins.flattened.smithy
$version: "2.0"

namespace smithy.example

structure B {}

structure F {}
