smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enums/int-enum-without-member.smithy
// intEnum shapes must have at least one member

$version: "2.0"

namespace smithy.example

intEnum IntEnum {}
